Implementing delete and single view for reviews with error handling

--- a/RentAMovie/Views/Movie/MovieUser.cshtml
+++ b/RentAMovie/Views/Movie/MovieUser.cshtml
@@ -172,7 +172,7 @@
                             @Model.Review.Content
                         </p>
                         <div class="buttons">
-                            <a href="#">
+                            <a asp-controller="Review" asp-action="SingleReview" asp-route-reviewId="@Model.Review.Id">
                                 <p>Open review</p>
                             </a>
                         </div>
