--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -218,6 +218,18 @@ body .container{
     user-select: none;
 }
 
+#no-reviews {
+    width: 200px;
+    opacity: 80%;
+    padding-left: 10px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .review-section {
     max-height: 300px;
     display: flex;
