--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -159,6 +159,68 @@
     user-select: none;
 }
 
+.review-section {
+    max-height: 300px;
+    display: flex;
+    border: 2px solid #d5d5d5;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 3px 5px 15px #a7a7a7;
+}
+
+.review-section img {
+    width: 120px;
+    height: 120px;
+
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.review-content {
+    width: 100%;
+    padding-left: 20px;
+}
+
+.review-content h5 {
+    margin: 0;
+    font-size: 1.3rem;
+}
+
+.review-content a {
+    text-decoration: none !important;
+    color: #0c0c0c !important;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.review-content a p {
+    margin: 0;
+}
+
+.review-content a p:hover {
+    color: #0d6efd;
+}
+
+.review-date {
+    opacity: 80%;
+    font-size: 0.9rem;
+}
+
+.review-text {
+    margin-bottom: 5px;
+    max-width: 630px;
+    max-height: 165px;
+    overflow: hidden;
+    word-wrap: anywhere;
+}
+
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 @media screen and (max-width: 473px) {
     .movie-section {
         display: block;
@@ -169,6 +231,10 @@
         margin-right: 0px;
     }
 
+    .review-section {
+        width: 100%;
+        padding-right: 0;
+    }
 }
 
 @media screen and (max-width: 270px) {
