--- a/RentAMovie/wwwroot/css/reviews.css
+++ b/RentAMovie/wwwroot/css/reviews.css
@@ -141,3 +141,15 @@
 .form-group {
     margin-bottom: 10px;
 }
+
+#no-reviews {
+    width: 200px;
+    opacity: 80%;
+    padding-left: 10px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
