--- a/RentAMovie/wwwroot/css/reviews.css
+++ b/RentAMovie/wwwroot/css/reviews.css
@@ -42,7 +42,8 @@
     margin-right: 10px;
 }
 
-.review-content a p {
+.review-content a p,
+.movie-title a p{
     margin: 0;
 }
 
@@ -53,6 +54,12 @@
 .review-date {
     opacity: 80%;
     font-size: 0.9rem;
+}
+
+.review-movie {
+    opacity: 80%;
+    font-size: 0.9rem;
+    margin: 0;
 }
 
 .review-text {
@@ -152,4 +159,58 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+#profile-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+    box-shadow: 5px 5px 10px #888888;
+}
+
+.movie-filter-section {
+    padding-left: 20px;
+    color: #212529;
+}
+
+.search-section {
+    display: flex;
+}
+
+.filter-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+.filter-controls label{
+    font-size: 1.1rem;
+}
+
+.filter-controls input {
+    background-color: inherit;
+    border: none;
+    padding: 0;
+    font-weight: 500;
+}
+
+.filter-controls input:hover {
+    color: #0d6efd;
+}
+
+.form-select::-webkit-scrollbar-track {
+    padding: 2px 0;
+    background-color: inherit;
+}
+
+.form-select::-webkit-scrollbar {
+    width: 10px;
+}
+
+.form-select::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #cbcbcb;
 }
