Implementing reviews for TMDB movies and fixing bugs

--- a/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -6,3 +6,5 @@
 @using RentAMovie.Areas.Identity.Pages.Account.Manage
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
+@using RentAMovie.Models.Review
+@using RentAMovie.Models.MovieModuls
