--- a/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -18,8 +18,18 @@
 
     var userLastReview = data.Reviews
         .Where(r => r.UserId == currentUser.Id)
+        .Select(r => new ViewReviewModel{
+            Id = r.Id,
+            Content = r.Content,
+            CreationDate = r.CreationDate,
+            MovieInfo = new Movie {
+                Id = r.MovieId,
+                Title = r.Movie.Title
+            }
+        })
         .OrderByDescending(r => r.CreationDate)
         .FirstOrDefault();
+        
 
     var yearsFromCreation = DateTime.UtcNow.Year - currentUser.DateCreated.Year;
     var monthsFromCreation = ((DateTime.UtcNow.Year - currentUser.DateCreated.Year) * 12) + DateTime.UtcNow.Month - currentUser.DateCreated.Month;
@@ -151,7 +161,7 @@
                     <div class="review-content">
                         <h5>@currentUser.UserName</h5>
                         <p class="review-movie">
-                            For movie - @userLastReview.Movie.Title
+                            For movie - @userLastReview.MovieInfo.Title
                         </p>
                         <p class="review-date">Written on @userLastReview.CreationDate.ToString("MMM d, yyyy")</p>
                         <p class="review-text">
