--- a/RentAMovie/Views/Review/AllUserReview.cshtml
+++ b/RentAMovie/Views/Review/AllUserReview.cshtml
@@ -3,7 +3,7 @@
 	ViewData["Title"] = "My reviews";
 }
 
-<div class="header-info">
+<div class="header-info" id="review-filters">
 	@if (Model.UserInfo.Photo != null && Model.UserInfo.Photo != "")
 	{
 		<img id="profile-photo" src="@Model.UserInfo.Photo" />
@@ -35,27 +35,29 @@
 
 @if (Model.Reviews.Count() > 0)
 {
-	@foreach (var review in Model.Reviews)
-	{
-		<div class="review-section col-9">
-			<div class="review-content">
-				<p class="review-movie">
-					For movie - @review.MovieInfo.Title
-				</p>
-				<p class="review-date">
-					Written on @review.CreationDate.ToString("MMM d, yyyy")
-				</p>
-				<p class="review-text">
-					@review.Content
-				</p>
-				<div class="buttons">
-					<a asp-controller="Review" asp-action="SingleReview" asp-route-reviewId="@review.Id">
-						<p>Open review</p>
-					</a>
+	<div class="user-reviews">
+		@foreach (var review in Model.Reviews)
+		{
+			<div class="review-section col-9">
+				<div class="review-content">
+					<p class="review-movie">
+						For movie - @review.MovieInfo.Title
+					</p>
+					<p class="review-date">
+						Written on @review.CreationDate.ToString("MMM d, yyyy")
+					</p>
+					<p class="review-text">
+						@review.Content
+					</p>
+					<div class="buttons">
+						<a asp-controller="Review" asp-action="SingleReview" asp-route-reviewId="@review.Id">
+							<p>Open review</p>
+						</a>
+					</div>
 				</div>
 			</div>
-		</div>
-	}
+		}
+	</div>
 }
 else
 {
@@ -64,4 +66,7 @@ else
 
 @section Styles {
 	<link rel="stylesheet" href="~/css/reviews.css" />
+}
+@section Scripts {
+    <script src="~/js/reviews/removeMultiple.js"></script>
 }
