--- a/RentAMovie/wwwroot/css/reviewSingle.css
+++ b/RentAMovie/wwwroot/css/reviewSingle.css
@@ -30,3 +30,24 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     color: #ff3131 !important;
 }
+
+#back {
+    color: #0c0c0c;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+#back p {
+    margin-left: 20px;
+}
+
+#back:hover {
+    color: #0d6efd !important;
+}
+
+@media screen and (max-width: 570px) {
+    .review-section {
+        width: 97%;
+        margin: 0;
+    }
+}
