--- a/RentAMovie/Views/Shared/Movie/_MovieFilters.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieFilters.cshtml
@@ -1,29 +1,32 @@
-﻿<div class="search-section">
+﻿@model FilterMovieModel
+
+<div class="search-section">
 	<h1>Movies</h1>
 	<div class="top-nav">
-		<div class="dropdown">
-			<a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				Sort By
-			</a>
-			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" href="#">Rating Descending</a></li>
-				<li><a class="dropdown-item" href="#">Rating Ascending</a></li>
-				<li><a class="dropdown-item" href="#">Popularity Descending</a></li>
-				<li><a class="dropdown-item" href="#">Popularity Ascending</a></li>
-				<li><a class="dropdown-item" href="#">Release Date Descending</a></li>
-				<li><a class="dropdown-item" href="#">Release Date Ascending</a></li>
-				<li><a class="dropdown-item" href="#">Title (A-Z)</a></li>
-				<li><a class="dropdown-item" href="#">Title (Z-A)</a></li>
-			</ul>
-		</div>
-		<div class="dropdown">
-			<a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				Filters
-			</a>
-			<ul class="dropdown-menu">
-				<li><a class="dropdown-item" href="#">Number of votes</a></li>
-			</ul>
-		</div>
-		<a asp-controller="Search" asp-action="Index" class="btn btn-secondary">Search</a>
+		
 	</div>
+</div>
+<div>
+	<form method="get" autocomplete="off">
+		<select class="form-select" aria-label="Default select example">
+			<option value="1">One</option>
+			<option value="2">Two</option>
+			<option value="3">Three</option>
+		</select>
+		<select class="form-select" asp-for="SortBy">
+			<option selected>Sort by</option>
+			<option value="1">Rating Descending</option>
+			<option value="2">Rating Ascending</option>
+			<option value="3">Popularity Descending</option>
+			<option value="4">Popularity Ascending</option>
+			<option value="5">Release Date Descending</option>
+			<option value="6">Release Date Ascending</option>
+			<option value="7">Title (A-Z)</option>
+			<option value="8">Title (Z-A)</option>
+		</select>
+		<select class="form-select">
+			<option value="1">Number of votes</option>
+		</select>
+		<input type="submit" value="Search" />
+	</form>
 </div>
